--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -41,4 +41,34 @@ body {
 
 /* Body Section */
 
+.percentage-sec {
+  text-align: center;
+  font-family: Inter;
+}
+
+.percenatge {
+  color: #f00;
+  font-size: 88px;
+  font-weight: 700;
+  padding: 120px 0 48px;
+}
+
+.holidays-txt {
+  color: #f00;
+  font-size: 24px;
+  font-weight: 500;
+  padding: 0 0 16px;
+}
+
+.catagories-txt {
+  padding: 0 0 48px;
+  color: #070211;
+  font-size: 48px;
+  font-weight: 700;
+}
+
+.midnight-party {
+  background: linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0) 100%);
+}
+
 /* Footer Section */
