--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -214,4 +214,96 @@ body {
   font-weight: 400;
   line-height: 32px;
 }
+
+.subscribe-section form {
+  max-width: 800px;
+  display: flex;
+
+  margin-top: 20px;
+  margin-left: 27%;
+  font-size: 20px;
+}
+
+.subscribe-section form input {
+  width: 380px;
+  height: 72px;
+  border: 0;
+  border-radius: 50px 0 0 50px;
+  text-align: start;
+  padding-left: 40px;
+  color: rgba(7, 2, 17, 0.3);
+
+  /* margin: 48px 50x; */
+}
+
+.subscribe-section form button {
+  width: 180px; /* Adjust the width as needed */
+  height: 72px;
+  border: 0;
+  border-radius: 0 50px 50px 0;
+  background-color: #f00;
+  color: #ffffff;
+  margin-left: 0px; /* Adjust the margin between input and button */
+}
 /* Footer Section */
+
+footer {
+  margin: 0;
+  padding: 0;
+  background-color: #070211;
+  width: 100%;
+  height: 450px;
+  color: #fff;
+  font-size: 24px;
+  /* padding: 5%; */
+  
+}
+
+.footer-top{
+  display: flex;
+  /* height: 34%; */
+  /* padding: 10px; */
+  padding: 3%;
+  justify-content: space-between;
+}
+
+.space{
+  margin-right:1.5rem;
+}
+
+.social-links {
+  display: flex;
+  justify-content: center; 
+  gap: 20px; 
+  /* margin: 60px 0; */
+  padding: 3%;
+}
+
+.copyright{
+  display: flex;
+  padding: 5% 5% 0;
+  justify-content: space-between;
+
+
+}
+
+/* .unsubscribe{
+  height: 50px;
+  width: 140px;
+  /* margin: 0px 30px 30px 0; 
+  margin-bottom: 5%;
+  background-color: #f00;
+  border: 0;
+
+} */
+
+.copyright button{
+  background-color: #070211;
+  color: red;
+  font-size: 24px;
+  border: 0;
+  padding: auto;
+  cursor: pointer;
+  
+
+}
