--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -14,7 +14,7 @@ body {
 /* Header Section */
 .banner {
   background: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0) 100%),
-    url("../images/Banner Image.png");
+    url("../images/BannerImage.png");
   background-position: bottom center;
   background-size: cover;
   height: 100vh;
@@ -123,8 +123,8 @@ body {
 
 .party-venue {
   width: 1300px;
-  height: 600px;
-  margin: 120px auto;
+  height: 500px;
+  margin: 120px auto 0px;
   background: linear-gradient(
     180deg,
     rgba(255, 0, 0, 0.1) 0%,
@@ -145,8 +145,75 @@ body {
   color: #f00;
 }
 
+/* Round Circle Image Section */
+.circle-image-section {
+  display: flex;
+  margin: 0 120px;
+  justify-content: space-between;
+}
+
+.text-title {
+  color: #f00;
+  font-size: 24px;
+  padding-top: 25%;
+}
+
+.text-header {
+  color: black;
+  font-size: 48px;
+  margin: 16px 0 22px 0;
+}
+.text-desc {
+  color: rgba(7, 2, 17, 0.6);
+  font-size: 20px;
+  font-weight: 400;
+}
+
+.circle {
+  height: 400px;
+  width: 400px;
+  background-color: white;
+  border: 10px solid red;
+  border-radius: 50%;
+}
+
+.circle img {
+  height: 350px;
+  width: 350px;
+  border-radius: 50%;
+  background-size: cover;
+  padding: 25px; 
+}
+
+.year {
+  color: #f00;
+  font-family: Inter;
+  font-size: 48px;
+  font-weight: 700;
+  margin-left: 43px;
+  padding-top: 25%;
+}
+
+.circle-image img {
+  height: 140px;
+  width: 140px;
+  padding-left: 43px;
+}
+
+.image-desc {
+  color: rgba(7, 2, 17, 0.6);
+  font-size: 20px;
+  font-weight: 400;
+  margin: 16px 0 28px 43px;
+}
+
+
+
+
+
+/* Gallery Styles */
 .gallery-section {
-  margin: 0 140px 0 100px;
+  margin: 120px 140px 0 100px;
 }
 
 .gallery-title {
@@ -256,10 +323,9 @@ footer {
   color: #fff;
   font-size: 24px;
   /* padding: 5%; */
-  
 }
 
-.footer-top{
+.footer-top {
   display: flex;
   /* height: 34%; */
   /* padding: 10px; */
@@ -267,24 +333,22 @@ footer {
   justify-content: space-between;
 }
 
-.space{
-  margin-right:1.5rem;
+.space {
+  margin-right: 1.5rem;
 }
 
 .social-links {
   display: flex;
-  justify-content: center; 
-  gap: 20px; 
+  justify-content: center;
+  gap: 20px;
   /* margin: 60px 0; */
   padding: 3%;
 }
 
-.copyright{
+.copyright {
   display: flex;
   padding: 5% 5% 0;
   justify-content: space-between;
-
-
 }
 
 /* .unsubscribe{
@@ -297,13 +361,11 @@ footer {
 
 } */
 
-.copyright button{
+.copyright button {
   background-color: #070211;
   color: red;
   font-size: 24px;
   border: 0;
   padding: auto;
   cursor: pointer;
-  
-
 }
