--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -123,7 +123,7 @@ body {
 
 .party-venue {
   width: 1300px;
-  height: 500px;
+  height: 400px;
   margin: 120px auto 0px;
   background: linear-gradient(
     180deg,
@@ -182,7 +182,7 @@ body {
   width: 350px;
   border-radius: 50%;
   background-size: cover;
-  padding: 25px; 
+  padding: 25px;
 }
 
 .year {
@@ -207,11 +207,60 @@ body {
   margin: 16px 0 28px 43px;
 }
 
+/* Function Holidays Section */
 
+.func-holidays {
+  margin: 120px;
+}
 
+.txt-func-holi {
+  text-align: center;
+}
+.txt-func-title {
+  color: #070211;
+  font-family: Inter;
+  font-size: 24px;
+  font-weight: 500;
+}
 
+.txt-func-header {
+  margin: 16px auto 28px;
+  color: #070211;
+  /* text-align: center; */
+  /* font-family: Merriweather; */
+  font-size: 72px;
+  /* font-style: normal; */
+  font-weight: 900;
+}
+
+.txt-func-header .bold-orng {
+  color: #f00;
+}
+
+.txt-func-desc {
+  color: rgba(7, 2, 17, 0.6);
+  font-size: 20px;
+  font-weight: 500;
+  margin-bottom: 68px;
+}
+.img-func-holi {
+  position: relative;
+}
+.img-right {
+  float: right;
+  margin-right: -39px;
+}
+.img-overflow {
+  position: absolute;
+  left: -50px;
+  bottom: 40px;
+}
+
+.img-bottom {
+}
 
 /* Gallery Styles */
+
 .gallery-section {
   margin: 120px 140px 0 100px;
 }
@@ -226,16 +275,14 @@ body {
 
 .gallery-header {
   color: #070211;
-  /* font-family: Merriweather; */
   font-size: 48px;
-  /* font-style: normal; */
   font-weight: 900;
   margin-bottom: 22px;
 }
 
 .gallery-desc {
   color: rgba(7, 2, 17, 0.6);
-  /* font-family: Inter; */
+
   font-size: 20px;
   line-height: 32px;
   margin-bottom: 48px;
@@ -285,10 +332,9 @@ body {
 .subscribe-section form {
   max-width: 800px;
   display: flex;
-
   margin-top: 20px;
   margin-left: 27%;
-  font-size: 20px;
+  /* font-size: 20px; */
 }
 
 .subscribe-section form input {
@@ -299,18 +345,21 @@ body {
   text-align: start;
   padding-left: 40px;
   color: rgba(7, 2, 17, 0.3);
+}
 
-  /* margin: 48px 50x; */
+.subscribe-section form input::placeholder {
+  font-size: 20px;
 }
 
 .subscribe-section form button {
-  width: 180px; /* Adjust the width as needed */
+  width: 180px;
   height: 72px;
   border: 0;
   border-radius: 0 50px 50px 0;
   background-color: #f00;
   color: #ffffff;
-  margin-left: 0px; /* Adjust the margin between input and button */
+  margin-left: 0px;
+  font-size: 20px;
 }
 /* Footer Section */
 
@@ -318,19 +367,20 @@ footer {
   margin: 0;
   padding: 0;
   background-color: #070211;
-  width: 100%;
-  height: 450px;
+  width: 90%;
+  height: 350px;
   color: #fff;
   font-size: 24px;
-  /* padding: 5%; */
+  padding: 5%;
 }
 
 .footer-top {
   display: flex;
   /* height: 34%; */
   /* padding: 10px; */
-  padding: 3%;
+  padding-bottom: 5%;
   justify-content: space-between;
+  /* margin:1.5rem */
 }
 
 .space {
@@ -351,16 +401,6 @@ footer {
   justify-content: space-between;
 }
 
-/* .unsubscribe{
-  height: 50px;
-  width: 140px;
-  /* margin: 0px 30px 30px 0; 
-  margin-bottom: 5%;
-  background-color: #f00;
-  border: 0;
-
-} */
-
 .copyright button {
   background-color: #070211;
   color: red;
@@ -368,4 +408,9 @@ footer {
   border: 0;
   padding: auto;
   cursor: pointer;
+}
+
+.phone,
+.website {
+  display: flex;
 }
