--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -6,6 +6,7 @@
   margin: 0;
   padding: 0;
 }
+
 body {
   font-family: "Inter", sans-serif;
   font-family: "Merriweather", serif;
@@ -21,7 +22,6 @@ body {
   width: auto;
   margin: 8px;
   border-radius: 16px;
-  /* margin: 50px auto; */
   text-align: center;
   color: #fff;
 }
@@ -72,8 +72,6 @@ body {
     url("../images/Vectorrr.png");
   background-position: bottom center;
   background-size: cover;
-  /* height: 70vh; */
-  /* width: auto; */
   width: 1320px;
   height: 600px;
   margin: 8px;
@@ -81,13 +79,9 @@ body {
   color: #fff;
   margin: 120px auto 0;
   display: flex;
-  /* margin-left: auto;
-  margin-right: auto; */
 }
 
 .party-greet {
-  /* color: #FFF; */
-  /* font-family: Merriweather; */
   font-size: 64px;
   font-weight: 900;
   line-height: 88px;
@@ -102,7 +96,8 @@ body {
   padding: 0 45px 0 126px;
 }
 
-.btn-join, .btn-join-venue {
+.btn-join,
+.btn-join-venue {
   height: 50px;
   width: 140px;
   padding: 8px;
@@ -112,7 +107,7 @@ body {
   font-size: 20px;
   margin: 48px 0 0 126px;
   cursor: pointer;
-  border-radius: 16px;
+  border-radius: 12px;
 }
 
 .midnight-party img {
@@ -139,17 +134,17 @@ body {
   font-size: 32px;
   font-weight: 600;
   margin-bottom: 48px;
-  /* align-items: center; */
 }
 
 .party-venue .txt-orng {
   color: #f00;
 }
-.btn-join-venue{
+.btn-join-venue {
   margin-left: -3%;
 }
 
 /* Round Circle Image Section */
+
 .circle-image-section {
   display: flex;
   margin: 0 120px;
@@ -230,10 +225,7 @@ body {
 .txt-func-header {
   margin: 16px auto 28px;
   color: #070211;
-  /* text-align: center; */
-  /* font-family: Merriweather; */
   font-size: 72px;
-  /* font-style: normal; */
   font-weight: 900;
 }
 
@@ -250,6 +242,13 @@ body {
 .img-func-holi {
   position: relative;
 }
+
+.img-discount {
+  position: absolute;
+  right: 250px;
+  top: 13%;
+}
+
 .img-right {
   float: right;
   margin-right: -39px;
@@ -259,7 +258,6 @@ body {
   left: -50px;
   bottom: 40px;
 }
-
 
 /* Gallery Styles */
 
@@ -284,38 +282,27 @@ body {
 
 .gallery-desc {
   color: rgba(7, 2, 17, 0.6);
-
   font-size: 20px;
   line-height: 32px;
   margin-bottom: 48px;
 }
 .gallery-images div {
-  
   display: flex;
   flex-direction: row;
-  gap: 20px;
-  margin: 20px 0;
+  gap: 35px;
+  margin: 35px 0;
 }
 
 .gallery-images div img {
- transition: all 1s;
- 
- 
+  transition: all 1s;
 }
 
 .gallery-images div img:hover {
-  /* max-width: 70%; */
-  /* height: 320px; */
   transform: rotate(30deg);
-  /* border-color: 5px solid  #f00; */
   cursor: pointer;
   border: 8px solid #f00;
   border-radius: 25px;
 }
-
-
-
-
 
 /*  SUBSCRIBE SECTION STYLES  */
 
@@ -355,7 +342,6 @@ body {
   display: flex;
   margin-top: 20px;
   margin-left: 27%;
-  /* font-size: 20px; */
 }
 
 .subscribe-section form input {
@@ -384,8 +370,6 @@ body {
   cursor: pointer;
 }
 
-
-
 /* Footer Section */
 
 footer {
@@ -403,7 +387,6 @@ footer {
   display: flex;
   padding-bottom: 5%;
   justify-content: space-between;
-  /* margin:1.5rem */
 }
 
 .space {
@@ -414,7 +397,6 @@ footer {
   display: flex;
   justify-content: center;
   gap: 20px;
-  /* margin: 60px 0; */
   padding: 3%;
 }
 
@@ -429,7 +411,6 @@ footer {
   color: red;
   font-size: 24px;
   border: 0;
-  /* padding: auto 0 ; */
   cursor: pointer;
 }
 
